Implementation for modifier and beat.