@@ -2,17 +2,12 @@ package evaluator;
 
 import ast.*;
 import ast.evaluator.Evaluator;
-import org.antlr.v4.runtime.CharStreams;
 import org.junit.Test;
-import parser.MusicLanguageLexer;
-import parser.MusicLanguageParser;
 
 import java.io.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class EvaluatorTest {
 
@@ -41,16 +36,16 @@ public class EvaluatorTest {
 
     @Test
     public void simpleCase() throws IOException {
-        Note note1 = new Note("a", "4", "");
-        Note note2 = new Note("b", "4", "");
-        Note note3 = new Note("c", "4", "");
-        Note note4 = new Note("d", "4", "");
-        ArrayList<Note> n = new ArrayList<Note>(Arrays.asList(note1, note2, note3, note4));
-        Chord c = new Chord(n);
-        ArrayList<Node> nc = new ArrayList<Node>(List.of(c));
+        Note note1 = new Note("c", "2", "flat");
+        Note note2 = new Note("e", "2", "");
+        Note note3 = new Note("g", "2", "sharp");
+        Note note4 = new Note("b", "2", "");
+        ArrayList<Note> n = new ArrayList<>(Arrays.asList(note1, note2, note3, note4));
+        Chord c = new Chord(n, note4.getBeat());
+        ArrayList<Node> nc = new ArrayList<>(List.of(c));
         Sequence s = new Sequence(nc);
 
-        MusicSheet parsedSheet = new MusicSheet(new ArrayList<Sequence>(List.of(s)));
+        MusicSheet parsedSheet = new MusicSheet(new ArrayList<>(List.of(s)));
 
         Evaluator e = new Evaluator();
         PrintWriter out = new PrintWriter(new FileWriter("./testScore.ly"));
